--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,7 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/macos,python,visualstudiocode,pycharm+all
 
 .streamlit/secrets.toml
+
+# Folders
+Final_Dataset/
+resultados/
